[workspace]
resolver = "2"
members = [ "dummy-bin", "dummy-lib" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/lovesegfault/dummy-rs"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]

[patch.crates-io]
dummy-lib = { path = "./dummy-lib" }
