[package]
name = "dummy-bin"
description = "Dummy binary crate for testing"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/lovesegfault/dummy-rs"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
rust-version = "1.58.1"

[dependencies]
dummy-lib = "0.3"
