[package]
name = "dummy-transitive"
description = "Dummy library for testing, with no reverse dependencies"
version = "0.4.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/lovesegfault/dummy-rs"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
rust-version = "1.58.1"

[dependencies]
